<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="settings_terminal_size_value" type="id" />
    <item name="settings_terminal_size_decrease" type="id" />
    <item name="settings_terminal_size_increase" type="id" />
    <item name="settings_draft_size_value" type="id" />
    <item name="settings_draft_size_decrease" type="id" />
    <item name="settings_draft_size_increase" type="id" />
    <item name="settings_hands_free_switch" type="id" />
    <item name="settings_diagnostics_switch" type="id" />
    <item name="settings_diagnostics_card" type="id" />
    <item name="settings_diagnostics_send_button" type="id" />
    <item name="settings_zen_switch" type="id" />
    <item name="settings_push_state" type="id" />
    <item name="settings_notify_blocked_switch" type="id" />
    <item name="settings_notify_done_switch" type="id" />
    <item name="settings_notify_updates_switch" type="id" />
    <item name="settings_snooze_30" type="id" />
    <item name="settings_snooze_60" type="id" />
    <item name="settings_snooze_240" type="id" />
    <item name="settings_snooze_resume" type="id" />
    <item name="settings_devices_list" type="id" />
    <item name="settings_pair_code" type="id" />
    <item name="settings_pair_input_layout" type="id" />
    <item name="settings_pair_label" type="id" />
    <item name="settings_pair_button" type="id" />
    <item name="settings_pair_status" type="id" />
    <item name="settings_device_current_action" type="id" />
    <item name="settings_updates_button" type="id" />
    <item name="settings_pack_button" type="id" />
    <item name="settings_server_diagnostics" type="id" />
    <item name="updates_back_button" type="id" />
    <item name="updates_status" type="id" />
    <item name="updates_checks" type="id" />
    <item name="updates_check_button" type="id" />
    <item name="updates_start_button" type="id" />
    <item name="updates_snooze_button" type="id" />
    <item name="pack_back_button" type="id" />
    <item name="pack_summary" type="id" />
    <item name="pack_members" type="id" />
</resources>

