...
    <item name="pane_keys_segment_keys" type="id" />
    <item name="pane_keys_segment_digits" type="id" />
    <item name="pane_keys_primary" type="id" />
    <item name="pane_keys_digits" type="id" />
    <item name="pane_keys_queue" type="id" />
    <item name="pane_keys_queue_clear" type="id" />
    <item name="pane_keys_queue_send" type="id" />
    <item name="pane_keys_queue_chips" type="id" />
    <item name="pane_keys_base_input" type="id" />
    <item name="pane_keys_modifiers" type="id" />
    <item name="pane_keys_presets_toggle" type="id" />
    <item name="pane_keys_presets" type="id" />
    <item name="pane_keys_functions_toggle" type="id" />
    <item name="pane_keys_functions" type="id" />
    <item name="transcript_load_older" type="id" />
...
    <item name="pane_keys_more" type="id" />
    <item name="pane_action_wrap" type="id" />
    <item name="pane_action_raw" type="id" />
    <item name="display_prefs_container" type="id" />
    <item name="composer_settings_button" type="id" />
    <item name="composer_dock_title" type="id" />
    <item name="composer_dock_close" type="id" />
    <item name="pane_rename_input" type="id" />
    <item name="pane_action_close_button" type="id" />
    <item name="pane_close_again" type="id" />
</resources>

